<resources>
    <string name="app_name">Media Escolar 2.0</string>
    <string name="action_settings">Sair</string>

    //content Main (Menu)
    <string name="botaoPrimeiroBim">Primeiro Bimestre</string>
    <string name="botaoSegundoBim">Segundo Bimestre</string>
    <string name="botaoTerceiroBim">Terceiro Bimestre</string>
    <string name="botaoQuartoBim">Quarto Bimestre</string>
    <string name="botaoResultaFinal">Resultado Final</string>

    //botoes Content Bimestres
    <string name="btnGravar">gravar</string>
    <string name="btnLimpar">limpar</string>

    //content Primeiro Bimestre
    <string name="tituloPrimeiroBim">Primeiro Bimestre</string>


    //content Segundo Bimestre
    <string name="tituloSegundoBim">Segundo Bimestre</string>

    //content Terceiro Bimestre
    <string name="tituloTerceiroBim">Terceiro Bimestre</string>

    //content Quarta Bimestre
    <string name="tituloQuartoBim">Quarto Bimestre</string>




</resources>
