<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_primeiroBimestreID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botaoPrimeiroBim"
                android:enabled="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_menu_customizado"
                />

            <Button
                android:id="@+id/btn_segundoBimestreID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/btn_menu_customizado"
                android:text="@string/botaoSegundoBim"
                android:layout_marginTop="@dimen/espacosEntreBotoes"/>

            <Button
                android:id="@+id/btn_terceiroBimestreID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/btn_menu_customizado"
                android:text="@string/botaoTerceiroBim"
                android:layout_marginTop="@dimen/espacosEntreBotoes"/>

            <Button
                android:id="@+id/btn_quartoBimestreID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/btn_menu_customizado"
                android:text="@string/botaoQuartoBim"
                android:layout_marginTop="@dimen/espacosEntreBotoes"/>

            <Button
                android:id="@+id/btn_resultadoFinalID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacosEntreBotoes"
                android:background="@drawable/btn_menu_customizado"
                android:enabled="false"
                android:text="@string/botaoResultaFinal" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>