<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtvw_tituloQuartoBimID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/tituloPrimeiroBim"
        android:textColor="@color/Texto"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tituloPrimeiroBim" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="Materia:"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_materiaQuartoBimID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Nota Prova:"
        android:textColor="@color/Texto"
        app:layout_constraintStart_toStartOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_tituloQuartoBimID" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="Nota Trab:"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_trabalQuartoBimID"
        app:layout_constraintStart_toStartOf="@+id/edtxt_trabalQuartoBimID" />

    <EditText
        android:id="@+id/edtxt_materiaQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toBottomOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintEnd_toStartOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtxt_provaQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/Texto"
        app:layout_constraintEnd_toStartOf="@+id/edtxt_trabalQuartoBimID"
        app:layout_constraintStart_toEndOf="@+id/edtxt_materiaQuartoBimID"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtxt_trabalQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toBottomOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintTop_toTopOf="@+id/edtxt_provaQuartoBimID" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Media:"
        android:textColor="@color/Texto"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtvw_titulo_resultadoFinalID"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_mediaQuartoFinalID"
        app:layout_constraintStart_toEndOf="@+id/txtvw_mediaQuartoFinalID"
        app:layout_constraintTop_toTopOf="@+id/txtvw_titulo_resultadoFinalID" />

    <TextView
        android:id="@+id/txtvw_titulo_resultadoFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="Resultado Final"
        android:textColor="@color/Texto"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_trabalQuartoBimID"
        app:layout_constraintStart_toEndOf="@+id/btn_TerceiroBimGravarID"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_trabalQuartoBimID" />

    <TextView
        android:id="@+id/txtvw_mediaQuartoFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="0,0"
        android:textColor="@color/Texto"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtvw_resultadoTerceiroFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="Indefinido"
        android:textColor="@color/Texto"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_titulo_resultadoFinalID"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_titulo_resultadoFinalID" />

    <Button
        android:id="@+id/btn_TerceiroBimGravarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_gravar_bimestre_customizado"
        android:enabled="true"
        android:text="@string/btnGravar"
        android:textColor="@color/Texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_mediaQuartoFinalID" />

    <Button
        android:id="@+id/btn_PrimeiroBimLimparID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_limpar_bimestre_customizado"
        android:enabled="true"
        android:text="@string/btnLimpar"
        android:textColor="@color/Texto"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_resultadoTerceiroFinalID"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_resultadoTerceiroFinalID" />
</android.support.constraint.ConstraintLayout>
